--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./pic.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="./subhashini1(1).jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>P.Subhashini</h1>
             <p>Assistant Professor</p>
         </div>
@@ -122,7 +122,7 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>Mdrass University</p>
+            <p>Madras University</p>
             
             
         </div>
